Add header bem classes

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
   <body>
 
-    <header>
+    <header class="header">
 
-      <p>Oskar Trautmann</p>
+      <h1 class="header__heading">Oskar Trautmann</h1>
 
-      <nav>
+      <nav class="header__nav">
         <a href="#contact">Kontakt</a>
 
         <a href="#bio">Biographie</a>
