Add skills classes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     </header>
 
-    <section>
+    <section class="skills">
 
       <img src="/image/bild-persönliche-website.png" alt="Persönliches Bild">
       <p> Lieber Besucher, ich danke dir vielmals für den Besuch meiner
@@ -33,7 +33,7 @@
 
       <p>Skills</p>
 
-      <ul>
+      <ul class="tag-list">
         <li>HTML</li>
         <li>CSS</li>
         <li>JavaScript</li>
@@ -44,10 +44,9 @@
         <li>Scrum</li>
       </ul>
 
-
       <p>Interessen</p>
 
-      <ul>
+      <ul class="tag-list">
         <li>Hunde</li>
         <li>Uhren</li>
         <li>Sport(Crossfit, Schwimmen)</li>
